@@ -1,5 +1,9 @@
 2008-11-24  Scott Ellington  <scott.ellington@gmail.com>
 
+	* Cumberland.MapToKml/Main.cs: support transform
+
+2008-11-24  Scott Ellington  <scott.ellington@gmail.com>
+
 	
 
 
